Fixing checkmark issue with vertical align instead

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_pricing.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_pricing.scss
@@ -196,10 +196,11 @@ $magenta: #e22866;
 
       &.desktop {
         .additional-note {
-          position: relative;
-          top: -3px;
           margin-left: 5px;
         }
+        .check-icon {
+          vertical-align: middle;
+        }        
       }
 
       @include media('<desktop') {
